--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_card: ^2.0.0
   flutter_modular: ^5.0.3
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
